trunk/Archive2/1c/d9ba600314aad8/output
main.cpp: In function 'int main()':
main.cpp:43:4: error: expected ';' before 'std'
    std::cout << x << std::endl;
    ^
main.cpp:43:31: warning: statement has no effect [-Wunused-value]
    std::cout << x << std::endl;
                               ^
main.cpp:41:53: warning: unused variable 'x' [-Wunused-variable]
    std::result_of<decltype(&F::test)(F, int)>::type x = 3.14;
                                                     ^
